colour and font changed

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 body{
-    background-color: lightblue;
+    background-color: rgb(244, 127, 11);
+}
+h1{
+    font-size: large;
+    font-style: italic;
+    font-size: x-large;
+    
 }
